<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.SplashScreenActivity">

    <!-- Piggy Bank Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First Coin (Will be animated to drop into piggy bank) -->
    <ImageView
        android:id="@+id/ivCoin1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/coin"
        android:src="@drawable/coin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Third Coin (Will remain visible above the piggy bank) -->
    <ImageView
        android:id="@+id/ivCoin3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/coin"
        android:src="@drawable/coin"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Name Text -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/rubik"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="70sp"
        android:textStyle="bold"
        android:letterSpacing="0.15"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <!-- Circle Reveal View -->
    <View
        android:id="@+id/circleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>